--- a/dashboard.html
+++ b/dashboard.html
@@ -73,7 +73,7 @@
             <div class="dashboard-page-content">
                 <div id="secao-dashboard" class="dashboard-section active-section"> 
                     <div class="kpi-cards-container">
-                        <div class="kpi-card"><h4 >Total de Vendas</h4><p id="kpi-total-vendas">R$ 0,00</p></div>
+                        <div class="kpi-card"><h4>Total de Vendas</h4><p id="kpi-total-vendas">R$ 0,00</p></div>
                         <div class="kpi-card"><h4>Nº de Transações</h4><p id="kpi-num-transacoes">0</p></div>
                         <div class="kpi-card"><h4>Ticket Médio</h4><p id="kpi-ticket-medio">R$ 0,00</p></div>
                     </div>
@@ -99,17 +99,16 @@
                 <div id="secao-clientes" class="dashboard-section">
                     <h2>Clientes</h2>
                     <p>Conteúdo da seção de clientes aqui...</p>
-                    </div>
+                </div>
 
                 <div id="secao-configuracoes" class="dashboard-section">
                     <h2>Configurações</h2>
                     <p>Conteúdo da seção de configurações aqui...</p>
-                    </div>
+                </div>
             </div> 
         </div> 
     </div> 
 
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <script src="js/dist/vendas.js" defer></script> 
-</body>
+    <script type="module" src="js/dist/vendas.js" defer></script>  </body>
 </html>
