--- a/dashboard.html
+++ b/dashboard.html
@@ -110,5 +110,6 @@
     </div> 
 
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <script type="module" src="js/dist/vendas.js" defer></script>  </body>
+    <script src="js/dist/vendas.js" defer></script>
+</body>
 </html>
