--- a/dashboard.html
+++ b/dashboard.html
@@ -110,6 +110,7 @@
     </div> 
 
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels@2.0.0/dist/chartjs-plugin-datalabels.min.js"></script>
     <script src="js/dist/vendas.js" defer></script>
 </body>
 </html>
